HuangLong, Rama, Zaou, Alilat Guide Update

--- a/index.html
+++ b/index.html
@@ -1267,16 +1267,36 @@
                         Elements which is a improved version of Makarakarn, reflecting all spells including
                         Almighty ones. Only pierce skills/phys attacks can be used. Regardless of the archetype, i
                         would recommend getting him as 5 Elements will make content much easier.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Yellow (Luster Candy). In addition to casting 5E, he can buff your party to boost all
-                            stats, what's not to love about that?</li>
-                        <li>Purple (Speedster). If you really need more speed, then he's your guy, with his
-                            naturally high speed your team would reach really high battle speed numbers, ensuring
-                            you act first.</li>
-                        <li>Teal (Null Dark). Due to his amazing natural resistances, Null Dark would mean he'd
-                            resist all elements be immune to Light and Dark.</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td>TO DO: <b>Life Aid</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td>TO DO:<b>Energy Drain</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td><b>Luster Candy</b> allows him to buff your party to boost all
+                                            stats, what's not to love about that?</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td><b>Speedster</b> with his
+                                            naturally high speed would allow your team to reach really high battle speed numbers, ensuring
+                                            you act first.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td><b>Null Dark</b> means he
+                                            resists all elements and be immune to Light and Dark.</td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Endure. For pvp and survival</li>
@@ -1300,21 +1320,37 @@
                         resistances, provided he's alive) and Brahmastra (Almighty hit all 3 times). He's the drain
                         version of Alilat's effect and with Brahmastra is effective against demons that have
                         endure/enduring soul.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Red is usable if you pulled him (Energy Drain + Mana Aid), though i wouldn't recommend
-                            archetype switching to him as Energy Drain is lackluster. Mana Aid makes him really
-                            good in pve, essentially you'd wipe out waves with Brahmastra, regain your mana, rinse
-                            and repeat. This would make him a really good demon to use in autoing provided he hits
-                            hard enough.</li>
-                        <li>Purple (Ice Pierce + Ice Age). The only source of ice pierce, being gacha exclusive.
-                            Though you'd want to spam Brahmastra, ice pierce would laugh in the face of 5 elements
-                            and you wouldn't have to bring Makara Break in those cases.</li>
-                        <li>Yellow (Luster Candy + Concentrate). Puts him more into a balanced role with better
-                            support and damage. Concentrate would allow you to use him in Jack Bros setups whilst
-                            Luster Candy would give you another source of buff all (Though that's better suited to
-                            Amaterasu/Huang Long).</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td>TO DO: <b></b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td><b>Energy Drain</b> is rather lackluster. <br><b>Mana Aid</b> makes him really
+                                            good in pve, essentially you'd wipe out waves with Brahmastra, regain your mana, rinse
+                                            and repeat. This would make him a really good demon to use in autoing provided he hits
+                                            hard enough.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td><b>Luster Candy</b> would give you another source of buff all (Though that's better suited to
+                                            Amaterasu/Huang Long).<br><b>Concentrate</b> would allow you to use him in Jack Bros setups.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td>TO DO:Though you'd want to spam Brahmastra, <b>Ice Pierce</b> would laugh in the face of 5 elements
+                                            and you wouldn't have to bring Makara Break in those cases.<br><b>Ice Age</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td>TO DO:<b>Drain Ice</b><br><b>Null Mute</b></td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Endure/Enduring soul. As long as he's alive you want Brahmastra spam.</li>
@@ -1331,16 +1367,36 @@
                     <p>One of the key pieces in the Rebellion + Pierce combo (Pair him with Hell Biker). This is
                         due to his unique skill Kongo Zaou which enables demons with Rebellion to also have pierce
                         attached to this phys skills.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Red (Herculean Strike). Only when you have Hell Biker with you, gives you a sweeping
-                            skill to use which is spammable too without needing divine brands.</li>
-                        <li>Yellow (Rebellion). Without Hell Biker you can still take advantage of his passive, so
-                            he himself can still be a really effective phys demon.</li>
-                        <li>Teal (Drain Phys). Only when you have Rama, though i'm not sure how viable Rama would
-                            be in a Biker Team (as i don't have a Hell Biker). I think Biker v Biker pvp matches
-                            would likely swing in your favour.</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td>TO DO: <b>Enduring Soul</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td><b>Herculean Strike</b> good only when you have Hell Biker with you, gives you a sweeping
+                                            skill to use which is spammable too without needing divine brands.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td><b>Rebellion</b> allows you to take advantage of his passive without Hell Biker, so
+                                            he himself can still be a really effective phys demon.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td>TO DO:<b>Fire Amp</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td><b>Drain Phys</b> is good only when you have Rama, though I'm not sure how viable Rama would
+                                            be in a Biker Team (as I don't have a Hell Biker). I think Biker v Biker pvp matches
+                                            would likely swing in your favour.</td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Elec to cover his weakness</li>
@@ -1357,10 +1413,33 @@
                         + Infernal Mask meaning she can inflict ailments quite well/be really unlikely to be
                         inflicted by ailments herself. Due to this you have a lot of freedom in picking how you
                         want to build her, whether a debuffer, ailment caster, or even a healer too.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Common. The only archetype available so really no choice.</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td><b>Diarahan</b> is a single target healing skill that could have niche use.
+                                        <br> This is her only archetype so you're stuck with this anyways. </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td>TO DO:<b></b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td>TO DO:<b></b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td>TO DO:<b></b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td>TO DO:<b></b></td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>          
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Samarecarm. For added support.</li>
