Lakshmi, Ixtab, Samael Guide Update

--- a/index.html
+++ b/index.html
@@ -1457,13 +1457,33 @@
                     <p>The demon with the highest magic stat in the game. She also comes with a unique skill Lotus
                         dance (60% chance to charm all enemies), given her high luck stat she's almost guaranteed
                         to inflict charm on the enemy team.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Teal (Null Force) to cover her weakness.</li>
-                        <li>Yellow (Defensive Cry) (Tarunda + Rakukaja), giving her more of a support utility.</li>
-                        <li>Purple (Insanity), another valid choice in increasing her really high ailment chance
-                            (perhaps you could even charm a rock O-O).</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td>TO DO: <b>Mana Gain</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td>TO DO:<b>Killing Wind</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td><b>Defensive Cry</b> (Tarunda + Rakukaja), gives her more of a support utility.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td><b>Insanity</b> is another valid choice in increasing her really high ailment chance
+                                            (perhaps you could even charm a rock O-O).</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td><b>Null Force</b> will cover her weakness.</td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Force. if her weakness isn't covered.</li>
@@ -1500,18 +1520,39 @@
                             </ul>
                         </li>
                     </ul>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Yellow (Mahashibaboon + Insanity). Due to her really high luck stat, when she is alive she
-                            can function as a ailment caster to be an annoyance to the enemy team. Insanity complements
-                            this and levelling up her passive also increases her ailment infliction rate. Give her
-                            other ailments and she can pile them on the enemy team.</li>
-                        <li>Purple (Berserker + Auto-Rakunda). Berserker, usually bad (+10% damage dealt, +20% damage
-                            taken) is good in her case as you'd want her to Die For Me. Auto-Rakunda also adds onto
-                            this making the enemy team worry more about their defenses at the start of the match. You
-                            can technically build her for magic if you want as berserker would make her hit harder. She
-                            has low strength so don't bother with phys skills/stats.</li>
-                    </ul>
+                    <div id="DemonGuideTable">
+                            <p><table>
+                              <tbody>
+                                <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                    <td>TO DO:<b></b><br><b></b></td>
+                                    <td></td>
+                                </tr>
+                                <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                    <td>TO DO:<b>Hell Gaze</b><br><b>Assassin</b></td>
+                                    <td></td>
+                                </tr>
+                                <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                    <td><b>Mahashibaboon</b> allows her to bind multiple enemies. <br><b>Insanity</b> complements
+                                        the fact that levelling up her passive also increases her ailment infliction rate. Give her
+                                        other ailments and she can pile them on the enemy team.</td>
+                                    <td></td>
+                                </tr>
+                                <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                    <td><b>Berserker</b>, usually bad (+10% damage dealt, +20% damage
+                                        taken) is good in her case as you'd want her to Die For Me. 
+                                        <br><b>Auto-Rakunda</b> also adds onto
+                                        this making the enemy team worry more about their defenses at the start of the match. You
+                                        can technically build her for magic if you want as berserker would make her hit harder. She
+                                        has low strength so don't bother with phys skills/stats.</td>
+                                    <td></td>
+                                </tr>
+                                <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                    <td>TO DO:<b>Null Light</b><br><b>Mabufudyne</b></td>
+                                    <td></td>
+                                </tr>
+                              </tbody>
+                            </table></p>
+                          </div>
                     <p><strong>Recommended Skills: </strong></p>
                     <ul>
                         <li>Madness. When Yellow its a good complement to go with her.</li>
@@ -1531,12 +1572,34 @@
                         effect attached to it, 3 uses however), Mana Aid meaning he'd be a really effective pve
                         demon and God's Malice a unique skill which can cause a myriad of ailments to a single
                         target.</p>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td>TO DO:<b>Death Counter</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td>TO DO:<b>Purgatory</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td>TO DO:<b>Tetrakarn</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td>Combining <b>Infinite Chakra</b> with divine brands will ensure that you can two turn cast anything.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td>TO DO:<b>Null Fire</b></td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
+          
                     <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Purple (Infinite Chakra). He has costly skills and so this will help in usage and
-                            spamming. Combining this with divine brands will ensure you can two turn cast
-                            Salvation.</li>
-                    </ul>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Elec to cover weakness</li>
