Seth, Barong, Siegfried Guide Update

--- a/index.html
+++ b/index.html
@@ -1598,8 +1598,6 @@
                                   </tbody>
                                 </table></p>
                               </div>
-          
-                    <p><strong>Best Archetype(s): </strong></p>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Elec to cover weakness</li>
@@ -1613,17 +1611,36 @@
                     <p>Second strongest demon in the game coming with Debilitate (Tarunda, Rakunda, Sukunda all in
                         one) and his unique skill Ouas (really high damage and excellent crit rate, with the added
                         40% healing based on damage done). He's built to be a single target sniping unit.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Clear (Titanomachia). With the added crit chance and accuracy upon levelling, it can be
-                            a good sweeping skill for him if you don't want Hades Blast. Given it gets the -1mp
-                            cost treatment it'd cost the same.</li>
-                        <li>Teal (Resist Fire). Covers his weakness you give you the freedom of customizing the
-                            rest of his skills.</li>
-                        <li>Yellow (Nocturne). Though you'd want to be spamming Ouas, Nocturne can add more support
-                            to him. Debilitate + Nocturne would ensure you have the most defensive advantage
-                            shifted to you.</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td><b>Titanomachia</b> with its added crit chance and accuracy upon levelling, can be
+                                            a good sweeping skill for him if you don't want Hades Blast. Given it gets the -1mp
+                                            cost treatment it'd cost the same.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td>TO DO:<b>Bleeder</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td><b>Nocturne</b> can add more support
+                                            to him. Debilitate + Nocturne would ensure you have the most defensive advantage
+                                            shifted to you.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td>TO DO:<b>Force Amp</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td><b>Resist Fire</b> covers his weakness to fire, giving you freedom of customization.</td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Fire if not covered by Teal.</li>
@@ -1641,10 +1658,33 @@
                         Candy when used (3 uses however). He has pretty low magic and it doesn't help that his
                         other two skills are Mazionga and Bolt Storm meaning he'll be spamming lighting if your
                         team is fully healed.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Teal (Null Dark), To cover one of his weaknesses. You also would need to cover force</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td>TO DO:<b>Endure</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td>TO DO:<b>Thunder Reign</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td>TO DO:<b>Recarmdra</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td>TO DO:<b>Elec Amp</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td><b>Null Dark</b> covers one of his weaknesses.</td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
+          
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Force to cover his second weakness</li>
@@ -1659,29 +1699,40 @@
                         effective at hitting his target without any problems or repercussions from reflected
                         attacks. Given he naturally has Rebellion, he's also good when paired with Zaou Gongen,
                         granting him phys pierce when he uses it.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Red and Yellow is decent but not that useful.</li>
-                        <li>With Red (Titanomachia + Great Aim), Siegfried already has good accuracy so Great Aim
-                            wouldn't do that much and you can always transfer something like Hades Blast instead
-                            for damage.</li>
-                        <li>Yellow (Charge + Auto-Sukunda), Charge is nice but you'd waste a lot of turns setting
-                            up both charge and rebellion. Auto-Sukunda is good but again his accuracy is already
-                            pretty good, that auto skill can be used from Yatagarasu anyhows.</li>
-                        <li>If however you want to go with accuracy stacking then Red is best for the job, maxing
-                            out Titanomachia would help in hitting evasive demons such as Garuda and Yatagarasu.
-                            Since an aoe is given to you, you have two free slots to customize with whatever you
-                            want. If you run him in a Hell Biker setup, then you don't even need to worry about
-                            getting Savage glee for crits. Auto-sukunda from yellow would help for turn one wipes
-                            (meaning you don't have to bring a Yatagarasu yourself), whilst Great Aim would help in
-                            more accuracy in general.</li>
-                        <li>Purple (Enduring Soul + Myriad Arrows). Adds to his survivability. Myriad arrows is
-                            also nice for bosses, though people prefer to just give him an Aoe instead.</li>
-                        <li>Teal (Null Force + Resist Dark). The main reason i'm recommending this is that it makes
-                            him completely immune to Susanoo as it blocks all of his sources of attacks. It can
-                            also block Rangda's Mazandyne and since a lot of demons have force in their kits in the
-                            first place it can shut down a lot of sweeps. Resist Dark can be replaced.</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td>TO DO:<b></b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td>Maxing out <b>Titanomachia</b> would help in hitting evasive demons such as Garuda and Yatagarasu.
+                                            Since an aoe is given to you, you have two free slots to customize with whatever you
+                                            want. If you run him in a Hell Biker setup, then you don't even need to worry about
+                                            getting Savage glee for crits.<br><b>Great Aim</b> would add even more accuracy.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td><b>Charge</b> is nice but you'd waste a lot of turns setting
+                                            up both charge and rebellion.<br><b>Auto-Sukunda</b> is good but again his accuracy is already
+                                            pretty good, that auto skill can be used from Yatagarasu anyhows.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td><b>Enduring Soul</b> adds to his survivability. <br><b>Myriad Arrows</b> is
+                                            nice for bosses, though people prefer to just give him an Aoe instead.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td><b>Null Force</b> makes him completely immune to Susanoo as it blocks all of his sources of attacks. It can
+                                            also block Rangda's Mazandyne and since a lot of demons have force in their kits in the
+                                            first place it can shut down a lot of sweeps.<br><b>Resist Dark</b> can be replaced.</td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>An Aoe Skill since he doesn't come with one, Hades Blast is good.</li>
